# lda-lemmas

./: .gitignore  README.md  it-happened.csv  it-happened.html  lda-lemmas.csv  lda-lemmas.html  mp.r  mp.txt
follow-up/: .flake8  .gitignore  README.md  coherence-analysis.Rmd  dodo.py  mypy.ini  preview-keys.bash  print-farsi-compounds.py  pyproject.toml  topic-model-analysis.Rmd  tree-tagger-english  tree-tagger-korean  tree-tagger-persian  tree-tagger-russian
follow-up/follow_up/: conversion.py  evaluation.py  lemmatization.py  translation.py  util.py
follow-up/results/: coherence-sanity.tsv  coherence.tsv  corpus-stats.tsv  voi.tsv
follow-up/results/en/: keys.txt
follow-up/results/fa/: keys.txt
follow-up/results/ko/: keys.txt
follow-up/results/ru/: keys.txt
follow-up/results/subsub/: coherence-sanity.tsv  coherence.tsv  voi.tsv
follow-up/tests/: test_follow_up.py
hit/: doc-counts.tsv  find-doc-count.bash  format-bs-topics-for-recovery.bash  mp.r  recover-tsv-topics.bash
hit/data/: wiki-ru-dll-10k-100-p-lda-big.csv  wiki-ru-dll-10k-100-p-lda-trunc50-big.csv  wiki-ru-dll-10k-100-p-lda-trunc50.csv  wiki-ru-dll-10k-100-p-lda.csv  (+4 more)
ingest/: bwt-filter-fixup-again.bash  bwt-filter-fixup.bash  bwt-filter.bash  bwt-map-lemmas.bash  bwt-project.bash  bwt-trunc-fixup.bash  bwt-trunc.bash  bwt-vocab.bash  compute-unknown.bash  convert.py  dump.bash  fixup-vocab-again.py  fixup-vocab.py  train.bash  unknown.tsv
paper/: .gitignore  Dockerfile  Dockerfile.template  Makefile  abstract.tex  acl2016.sty  clv2plain.cls  russian.bib  russian.tex  title.tex
(+36 files in other folders)
