[tool.poetry]
name = "follow-up"
version = "0.1.0"
description = "Follow-up to original lda-lemmas study"
authors = ["Chandler May <chandler.camille.may@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
doit = "^0.33.1"
tqdm = "^4.62.3"
pycountry = "^20.7.3"
#polyglot = "^16.7.4"
## polyglot dependencies
#six = "^1.16.0"
#numpy = "^1.21.3"
#Morfessor = "^2.0.6"
#PyICU = "^2.4.2"
#pycld2 = "^0.41"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
mypy = "^0.910"
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
